# Soniq

./: Cargo.toml  README.md  build.rs
packaging/: io.github.alisp.Soniq.desktop
packaging/macos/: Info.plist  make-dmg.sh
src/: config.rs  diagnostics.rs  effects.rs  handlers.rs  ipc.rs  main.rs  osd.rs  pipeline.rs  prefs.rs  render.rs  resume.rs  shine.rs  shortcuts.rs  state.rs  store.rs  subs.rs  subtitles.rs  theme.rs  ui.rs  util.rs  video.rs  wl_dnd.rs  wl_opaque.rs
ui/: app.slint
